--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-form": "0.0.2",
+    "react-form-inputs": "0.0.1",
     "react-redux": "^4.0.0",
     "react-router": "^2.6.1",
     "react-scroll": "^1.3.0",
