--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
+    "mq-sass": "^0.6.0",
     "react-addons-test-utils": "^0.14.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
@@ -39,6 +40,7 @@
     "react-redux": "^4.0.0",
     "react-router": "^2.6.1",
     "react-scroll": "^1.3.0",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "sass-mediaqueries": "^1.6.1"
   }
 }
