--- a/package.json
+++ b/package.json
@@ -30,17 +30,22 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
-    "babel-preset-stage-1": "^6.1.18",
     "classnames": "^2.2.5",
-    "lodash": "^3.10.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
     "react-form": "0.0.2",
     "react-form-inputs": "0.0.1",
-    "react-redux": "^4.0.0",
-    "react-router": "^2.6.1",
     "react-scroll": "^1.3.0",
+    "sass-mediaqueries": "^1.6.1",
+    "axios": "^0.12.0",
+    "babel-preset-stage-1": "^6.1.18",
+    "lodash": "^3.10.1",
+    "react": "^0.14.3",
+    "react-addons-linked-state-mixin": "^0.14.8",
+    "react-dom": "^0.14.3",
+    "react-google-maps": "^4.11.0",
+    "react-redux": "^4.0.0",
+    "react-router": "^2.4.1",
     "redux": "^3.0.4",
-    "sass-mediaqueries": "^1.6.1"
+    "redux-form": "^5.2.5",
+    "redux-promise": "^0.5.3"
   }
 }
